--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 13,
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
@@ -11,10 +11,13 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "no-unused-vars": "error",
+    "no-console": "warn",
+    "no-undef": "error",
+    "no-unused-expressions": "error",
+    "no-unreachable": "error",
+    "consistent-type-definitions": ["error", "type"]
   },
 
   "env": {
