--- a/.env
+++ b/.env
@@ -4,5 +4,11 @@ PORT=5000
 DATABASE_URL=mongodb+srv://university-admin:6nQp6VUXe2BaENQW@cluster0.bmyfd.mongodb.net/univercity-management?retryWrites=true&w=majority
 
 DEFAULT_STUDENT_PASS=univercity123!@#
-DEFAULT_FACULTY_PASS=univercity123!@#
-DEFAULT_ADMIN_PASS=univercity123!@#
+DEFAULT_FACULTY_PASS=univercityfaculty123!@#
+DEFAULT_ADMIN_PASS=univercityadmin123!@#
+
+BCRYPT_SALT_ROUNDS=12
+JWT_SECRET='very-secret'
+JWT_EXPIRES_IN=1d
+JWT_REFRESH_SECRET='very-refresh-secret'
+JWT_REFRESH_EXPIRES_IN=365d
