--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "src/**/*.ts": "npm run lint-prettier"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -30,10 +31,15 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.10.0",
